# socketio-react-chat-template

./: .env.default  .gitignore  README.md  environment.d.ts  package.json
backend/: __main__.py  package.json  pyproject.toml  requirements.txt
backend/backend/: __main__.py  app.py
backend/backend/chat/: message.py
frontend/: .gitignore  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/Chat/: Chat.scss  Chat.tsx  ChatInput.scss  ChatInput.tsx  Message.scss  Message.tsx  index.ts  types.ts
